# Tukar

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/web/: next.config.ts  package.json  pnpm-lock.yaml
circuits/: compliance.circom  disclosure.circom  merkleUpdate.circom  transfer.circom
circuits/lib/: merkleProof.circom
contracts/pool/: Cargo.toml
contracts/pool/src/: lib.rs  poseidon.rs  poseidon_constants.rs  test.rs
deployments/: testnet.json
docs/: ALTERNATIVES.md  ARCHITECTURE.md  CI_CD.md  DEMO_SCRIPT.md  ONCHAIN.md  PRODUCTION_READINESS.md  SECURITY.md  TESTING.md
frontend/: 404.html  app.js  demo.html  index.html  landing.css  landing.js  robots.txt  serve.mjs  sitemap.xml  stellar.js  styles.css  tree.js  wallet.js
frontend/.well-known/: stellar.toml
frontend/circuit/: asp-witness.json  compliance.wasm  compliance_final.zkey  (+4 more)
scripts/: browser-test.mjs  build-all-circuits.sh  build-circuit.sh  build-disclosure.sh  deploy-testnet.sh  e2e-playwright.mjs  empty-root.mjs  feebump-paymaster.mjs  gen-asp-witness.mjs  gen-input-compliance.mjs  gen-input-merkleupdate.mjs  gen-input-transfer.mjs  gen-input-withdraw.mjs  gen-input.mjs  gen-invoke-args.mjs  landing-check.mjs  make-vo.py  merkle.mjs  mux-video.py  proof-to-soroban.mjs  record-demo.mjs  record-narrated.mjs  record.mjs  scan-qr.mjs  sep-anchor.mjs  shoot.mjs  test-anchor.mjs  test-bearer.mjs  test-fullprove.mjs  test-negative.mjs  test-offramp.mjs  test-pages.mjs  test-unit.mjs  tight-cut.py  wsl-build-pool.sh  wsl-build-verifier.sh
(+8 files in other folders)
